k8s.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tsg

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tsg-postgres
  namespace: tsg
spec:
  selector:
    matchLabels:
      app: tsg-postgres
  serviceName: tsg-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: tsg-postgres
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: tsg-postgres
          image: postgres:12-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data/pgdata
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi

---
apiVersion: v1
kind: Service
metadata:
  name: tsg-postgres
  namespace: tsg
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: tsg-postgres

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tsg
  namespace: tsg
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tsg
  template:
    metadata:
      labels:
        app: tsg
    spec:
      containers:
        - name: tsg
          image: gcr.io/hmm-dev/tsg:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "0.5"
          readinessProbe:
            httpGet:
              path: /_health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 15

          livenessProbe:
            httpGet:
              path: /_health/alive
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: tsg-service
  namespace: tsg
  labels:
    name: tsg
spec:
  ports:
    - port: 8080
  selector:
    app: tsg

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tsg-ingress
  namespace: tsg
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - "tsg.hmm.dev"
      secretName: tsg-cert-secret
  rules:
    - host: "tsg.hmm.dev"
      http:
        paths:
          - path: /
            backend:
              serviceName: tsg-service
              servicePort: 8080
